--- a/app/templates/legal.html
+++ b/app/templates/legal.html
@@ -88,7 +88,7 @@
             </div>
 
             <div>
-              <h3 class="text-xl font-semibold text-yellow-300 mb-3">Data Collection & Retention</h3>
+              <h3 class="text-xl font-semibold text-yellow-300 mb-3">Privacy Policy, Data Collection & Retention</h3>
               <p class="mb-3">
                 This website collects minimal data necessary for tournament functionality:
               </p>
